# newrelic-telemetry-sdk-rust

./: Cargo.toml
src/: client.rs
tests/: spans.rs
tests/common/: mod.rs
