[package]
name = "newrelic-telemetry"
version = "0.1.0"
authors = ["New Relic <opensource@newrelic.com>"]
edition = "2018"

[features]
default = ["client"]
client = ["flate2", "hyper", "hyper-rustls"]
blocking = ["client", "futures", "tokio"]

[dependencies]
anyhow = "1.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hyper = { version = "0.14", features = [], optional = true }
hyper-rustls = { version = "0.22", features = [
    "webpki-roots"
], optional = true }
flate2 = { version = "1.0", optional = true }
futures = { version = "0.3", optional = true }
tokio = { version = "1.5", features = [
    "macros",
    "rt-multi-thread"
], optional = true }
uuid = { version = "0.8", features = ["v4"] }

[dev-dependencies]
rand = "0.8"
env_logger = "0.8"
futures = "0.3"
hyper = { version = "0.14", features = ["server"] }
tokio = { version = "1.5", features = ["macros", "rt-multi-thread"] }
